--- a/sass/_reset.sass
+++ b/sass/_reset.sass
@@ -38,3 +38,11 @@ h4
   margin: 0
   color: white
   text-transform: lowercase
+
+.flip
+  -moz-transform: scaleX(-1)
+  -o-transform: scaleX(-1)
+  -webkit-transform: scaleX(-1)
+  transform: scaleX(-1)
+  filter: FlipH
+  -ms-filter: "FlipH"
