--- a/media/index.pug
+++ b/media/index.pug
@@ -8,26 +8,25 @@ block content
   .media
     .home-button
       a(href="/" alt="Emily") E
-        img(src="../assets/img/dancing/crop/3.png")
-
+        img(src="../assets/img/dancing/crop/2.png")
     h3#photo Photo
     .media-container.photo-container
       .carousel
         img(src="../assets/img/dancing/carousel/1.jpg"  data-caption="1"  height="200px")
         img(src="../assets/img/dancing/carousel/2.png"  data-caption="2"  height="200px")
         img(src="../assets/img/dancing/carousel/3.jpg"  data-caption="3"  height="200px")
-        img(src="../assets/img/dancing/carousel/4.jpg"  data-caption="4"  height="200px")
-        img(src="../assets/img/dancing/carousel/5.jpg"  data-caption="5"  height="200px")
-        img(src="../assets/img/dancing/carousel/6.png"  data-caption="6"  height="200px")
-        img(src="../assets/img/dancing/carousel/7.png"  data-caption="7"  height="200px")
-        img(src="../assets/img/dancing/carousel/8.png"  data-caption="8"  height="200px")
-        img(src="../assets/img/dancing/carousel/9.png"  data-caption="9"  height="200px")
-        img(src="../assets/img/dancing/carousel/10.png" data-caption="10" height="200px")
-        img(src="../assets/img/dancing/carousel/11.png" data-caption="11" height="200px")
-        img(src="../assets/img/dancing/carousel/12.png" data-caption="12" height="200px")
-        img(src="../assets/img/dancing/carousel/13.png" data-caption="13" height="200px")
-        img(src="../assets/img/dancing/carousel/14.png" data-caption="14" height="200px")      
-        img(src="../assets/img/dancing/carousel/15.png" data-caption="15" height="200px")
+        //- img(src="../assets/img/dancing/carousel/4.jpg"  data-caption="4"  height="200px")
+        //- img(src="../assets/img/dancing/carousel/5.jpg"  data-caption="5"  height="200px")
+        //- img(src="../assets/img/dancing/carousel/6.png"  data-caption="6"  height="200px")
+        //- img(src="../assets/img/dancing/carousel/7.png"  data-caption="7"  height="200px")
+        //- img(src="../assets/img/dancing/carousel/8.png"  data-caption="8"  height="200px")
+        //- img(src="../assets/img/dancing/carousel/9.png"  data-caption="9"  height="200px")
+        //- img(src="../assets/img/dancing/carousel/10.png" data-caption="10" height="200px")
+        //- img(src="../assets/img/dancing/carousel/11.png" data-caption="11" height="200px")
+        //- img(src="../assets/img/dancing/carousel/12.png" data-caption="12" height="200px")
+        //- img(src="../assets/img/dancing/carousel/13.png" data-caption="13" height="200px")
+        //- img(src="../assets/img/dancing/carousel/14.png" data-caption="14" height="200px")      
+        //- img(src="../assets/img/dancing/carousel/15.png" data-caption="15" height="200px")
       .caption
     //- h3#video Video
     //- .media-container.video-container
