--- a/sass/index.sass
+++ b/sass/index.sass
@@ -29,11 +29,16 @@ $font-caption: $font-lato
   font-style: $font-caption
   font-weight: lighter
   position: fixed
-  top: 5px
+  top: 10px
   left: 25px
+  padding: 0px 5px 3px
+  border: 4px solid white
   a
     display: flex
+    height: 72px
+    line-height: 72px
     align-items: center
+    vertical-align: middle
     *
       display: inline-block
       height: 60px
@@ -174,7 +179,7 @@ $font-caption: $font-lato
     position: center
     repeat: no-repeat
   &.dance
-    +dance(3.5s)
+    +dance(3.2s)
   &:not(.dance)
     left: 75%
     background-image: url(../img/dancing/13.png)
