make /videos use a carousel too

--- a/index.pug
+++ b/index.pug
@@ -29,9 +29,9 @@ block content
         span.menu-button  media
         ul.sub-menu 
           li 
-            a.site-link(href="/media#video" alt="video") video
+            a.site-link(href="/video" alt="video") video
           li 
-            a.site-link(href="/media#photo" alt="photo") photo
+            a.site-link(href="/photo" alt="photo") photo
       .menu-item 
         span.menu-button.contact contact
       .dancing-image.dance
