--- a/sass/index.sass
+++ b/sass/index.sass
@@ -4,13 +4,10 @@
 @import "animate.css"
 
 @import animations
+@import fonts
 @import palette
 @import file-refs
 @import bio
-
-$font-lato: 'Lato', sans-serif
-$font-titilium: 'Titillium Web', sans-serif
-$font-caption: $font-lato
 
 @import reset, media
 
