--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -287,36 +287,25 @@ h4 {
   flex-wrap: wrap;
   justify-content: space-around; }
   .media .media-container .card {
-    margin: 1% 3%;
-    width: auto;
-    height: auto;
-    position: relative;
-    width: 40%;
-    height: 315px; }
+    width: 350px;
+    height: 200px; }
     .media .media-container .card iframe {
-      position: absolute;
       width: 100%;
       height: 100%; }
-    .media .media-container .card .caption {
-      position: absolute;
-      display: none;
-      bottom: 45px;
-      right: 0;
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 5px 10px; }
+  .media .media-container.video-container .carousel {
+    transform: translateY(-100px);
+    height: 80vh; }
 .media .carousel {
   width: 100%;
   height: 50vh;
   position: relative; }
-  .media .carousel img {
+  .media .carousel img, .media .carousel .card {
     position: absolute;
     display: none;
     top: 50%;
     left: 50%;
     transform: translate3d(-50%, -50%, 0px) scale(1.5);
     transform-origin: top center; }
-    .media .carousel img:nth-of-type(2) {
-      left: 70%; }
 .media .caption {
   display: inline-block;
   color: white;
