--- a/photo/index.pug
+++ b/photo/index.pug
@@ -28,6 +28,18 @@ block content
         img(src="../assets/img/dancing/carousel/14.png" data-caption="14" height="200px")      
         img(src="../assets/img/dancing/carousel/15.png" data-caption="15" height="200px")
       .caption
+    //- h3#video Video
+    //- .media-container.video-container
+      .card
+        iframe(src="https://player.vimeo.com/video/151188661?title=0&byline=0&portrait=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
+        .caption
+          p <a href="https://vimeo.com/151188661">Not Empty</a> by <a href="https://vimeo.com/user47620788">Emily Hansel</a>
+      .card
+        iframe(src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
+      .card
+        iframe(src="https://www.youtube.com/embed/GR-ItOkoQ6w?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
+      .card
+        iframe(src="https://www.youtube.com/embed/m0vI2u5sM1I?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)          
 block scripts
   script(src="../assets/js/jquery.js")
   script(src="../assets/js/jquery.mousewheel.min.js")
