--- a/sass/media.sass
+++ b/sass/media.sass
@@ -1,3 +1,4 @@
+@import fonts
 .media
   .home-button
     left: 5px
@@ -9,37 +10,28 @@
     flex-wrap: wrap
     justify-content: space-around
     .card
-      margin: 1% 3%
-      width: auto
-      height: auto
-      position: relative
-      width: 40%
-      height: 315px
+      width: 350px
+      height: 200px
       iframe
-        position: absolute
         width: 100%
         height: 100%
-      .caption
-        position: absolute
-        display: none
-        bottom: 45px
-        right: 0
-        background-color: rgba(0,0,0,0.7)
-        padding: 5px 10px
+    &.video-container
+      .carousel
+        transform: translateY(-100px)
+        height: 80vh
+
   .carousel
     width: 100%
     height: 50vh
     position: relative
 
-    img
+    img, .card
       position: absolute
       display: none
       top: 50%
       left: 50%
       transform: translate3d(-50%, -50%, 0px) scale(1.5)
       transform-origin: top center
-      &:nth-of-type(2)
-        left: 70%
   .caption
     display: inline-block
     color: white
