update so reload main causes animation reload, but not when you return to main

--- a/index.pug
+++ b/index.pug
@@ -34,7 +34,7 @@ block content
             a.site-link(href="/photo" alt="photo") photo
       .menu-item 
         span.menu-button.contact contact
-      .dancing-image.dance
+      .dancing-image
   //- img.leftImage(src='assets/img/dancing/5.png')
   
   .load-images
