--- a/statement/index.pug
+++ b/statement/index.pug
@@ -38,3 +38,4 @@ block content
         expressing different things than words can, and I do not attempt to impose the confines of 
         language upon dance. Thus, I usually let my work speak for itself.
 block scripts
+  script sessionStorage.seen = true;
