--- a/video/index.pug
+++ b/video/index.pug
@@ -25,3 +25,4 @@ block scripts
   script(src="../assets/js/jquery.js")
   script(src="../assets/js/jquery.mousewheel.min.js")
   script(src="../assets/js/carousel.js")
+  script sessionStorage.seen = true;
