--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -298,7 +298,8 @@ h4 {
 .media .carousel {
   width: 100%;
   height: 50vh;
-  position: relative; }
+  position: relative;
+  z-index: -1; }
   .media .carousel img, .media .carousel .card {
     position: absolute;
     display: none;
@@ -364,8 +365,8 @@ h4 {
     opacity: 0;
     -webkit-animation: fadeIn 600ms linear forwards;
     animation: fadeIn 600ms linear forwards;
-    -webkit-animation-delay: 3s;
-    animation-delay: 3s; }
+    -webkit-animation-delay: 3.2s;
+    animation-delay: 3.2s; }
   .body-container .menu {
     color: white;
     padding: 0;
@@ -478,7 +479,7 @@ h4 {
     -webkit-animation: dance 3.2s linear forwards; }
   .dancing-image:not(.dance) {
     left: 75%;
-    background-image: url(../img/dancing/13.png); }
+    background-image: url(../img/dancing/11.png); }
 
 .leftImage {
   z-index: -2;
