--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -19,7 +19,8 @@
 .media .carousel {
   width: 100%;
   height: 50vh;
-  position: relative; }
+  position: relative;
+  z-index: -1; }
   .media .carousel img, .media .carousel .card {
     position: absolute;
     display: none;
