--- a/photo/index.pug
+++ b/photo/index.pug
@@ -25,7 +25,7 @@ block content
         img(src="../assets/img/dancing/carousel/11.png" data-caption="11" height="200px")
         img(src="../assets/img/dancing/carousel/12.png" data-caption="12" height="200px")
         img(src="../assets/img/dancing/carousel/13.png" data-caption="13" height="200px")
-        img(src="../assets/img/dancing/carousel/14.png" data-caption="14" height="200px")      
+        img(src="../assets/img/dancing/carousel/14.png" data-caption="14" height="200px")
         img(src="../assets/img/dancing/carousel/15.png" data-caption="15" height="200px")
       .caption
     //- h3#video Video
@@ -39,8 +39,9 @@ block content
       .card
         iframe(src="https://www.youtube.com/embed/GR-ItOkoQ6w?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
       .card
-        iframe(src="https://www.youtube.com/embed/m0vI2u5sM1I?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)          
+        iframe(src="https://www.youtube.com/embed/m0vI2u5sM1I?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
 block scripts
   script(src="../assets/js/jquery.js")
   script(src="../assets/js/jquery.mousewheel.min.js")
   script(src="../assets/js/carousel.js")
+  script sessionStorage.seen = true;
