--- a/sass/_reset.sass
+++ b/sass/_reset.sass
@@ -7,6 +7,9 @@ body
   background:
     color: $bg-color
 
+p
+  color: white
+  
 a, a:visited, a:hover, a:focus
   text-decoration: none
   color: currentColor
