--- a/sass/index.sass
+++ b/sass/index.sass
@@ -7,9 +7,8 @@
 @import fonts
 @import palette
 @import file-refs
-@import bio
 
-@import reset, media
+@import reset, media, bio, choreography
 
 .load-images
   visibility: hidden
@@ -143,7 +142,7 @@
       border-color: lighten($form-color, 10%)
 
   input:not([type='submit'])
-    margin: 0 1%
+    margin: 0 0.5%
     height: 3em
     padding: 5px
     width: 44%
