--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -27,7 +27,7 @@ html
     .contact-form
       span x
       form(method="POST", action="https://formspree.io/emilylhansel@gmail.com")
-        p Fill out the form below or contact me at <a href="mailto:emilylhansel@gmail.com">emilylhansel@gmail.com</a>
+        p Fill out the form below to contact me
         input(tabindex="1",  type="text", name="name", placeholder="Name")
         input(tabindex="2",  type="email", name="_replyto", placeholder="Email")
         input(type="hidden", name="_next", value="#submitted")
