--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -428,7 +428,8 @@ h4 {
       margin-top: 30px;
       padding-bottom: 40px;
       padding-top: 30px;
-      border-bottom: 4px solid white; }
+      border-bottom: 4px solid white;
+      opacity: 0; }
       .body-container.choreo .choreo-container .choreo-box:last-child {
         border-bottom: none; }
       .body-container.choreo .choreo-container .choreo-box .visual, .body-container.choreo .choreo-container .choreo-box .copy {
@@ -449,6 +450,41 @@ h4 {
         clear: right; }
       .body-container.choreo .choreo-container .choreo-box .copy {
         height: 100%; }
+    .body-container.choreo .choreo-container .choreo-box:nth-of-type(1) {
+      -webkit-animation: fadeIn 300ms linear forwards;
+      animation: fadeIn 300ms linear forwards;
+      -webkit-animation-delay: 200ms;
+      animation-delay: 200ms; }
+    .body-container.choreo .choreo-container .choreo-box:nth-of-type(2) {
+      -webkit-animation: fadeIn 300ms linear forwards;
+      animation: fadeIn 300ms linear forwards;
+      -webkit-animation-delay: 400ms;
+      animation-delay: 400ms; }
+    .body-container.choreo .choreo-container .choreo-box:nth-of-type(3) {
+      -webkit-animation: fadeIn 300ms linear forwards;
+      animation: fadeIn 300ms linear forwards;
+      -webkit-animation-delay: 600ms;
+      animation-delay: 600ms; }
+    .body-container.choreo .choreo-container .choreo-box:nth-of-type(4) {
+      -webkit-animation: fadeIn 300ms linear forwards;
+      animation: fadeIn 300ms linear forwards;
+      -webkit-animation-delay: 800ms;
+      animation-delay: 800ms; }
+    .body-container.choreo .choreo-container .choreo-box:nth-of-type(5) {
+      -webkit-animation: fadeIn 300ms linear forwards;
+      animation: fadeIn 300ms linear forwards;
+      -webkit-animation-delay: 1000ms;
+      animation-delay: 1000ms; }
+    .body-container.choreo .choreo-container .choreo-box:nth-of-type(6) {
+      -webkit-animation: fadeIn 300ms linear forwards;
+      animation: fadeIn 300ms linear forwards;
+      -webkit-animation-delay: 1200ms;
+      animation-delay: 1200ms; }
+    .body-container.choreo .choreo-container .choreo-box:nth-of-type(7) {
+      -webkit-animation: fadeIn 300ms linear forwards;
+      animation: fadeIn 300ms linear forwards;
+      -webkit-animation-delay: 1400ms;
+      animation-delay: 1400ms; }
 
 .load-images {
   visibility: hidden;
