update /choreo to use flexbox

--- a/assets/css/choreography.css
+++ b/assets/css/choreography.css
@@ -1,169 +1,79 @@
-@-webkit-keyframes fadeIn {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
-@keyframes fadeIn {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
-@keyframes dance {
-  0%, 7% {
-    background-image: url(../img/dancing/1.png);
-    visibility: visible;
-    left: -84.09091%; }
-  7.001%, 9.999% {
-    background-image: none;
-    visibility: hidden; }
-  10%, 17% {
-    background-image: url(../img/dancing/2.png);
-    visibility: visible;
-    left: -68.18182%; }
-  17.001%, 19.999% {
-    background-image: none;
-    visibility: hidden; }
-  20%, 27% {
-    background-image: url(../img/dancing/3.png);
-    visibility: visible;
-    left: -52.27273%; }
-  27.001%, 29.999% {
-    background-image: none;
-    visibility: hidden; }
-  30%, 37% {
-    background-image: url(../img/dancing/4.png);
-    visibility: visible;
-    left: -36.36364%; }
-  37.001%, 39.999% {
-    background-image: none;
-    visibility: hidden; }
-  40%, 47% {
-    background-image: url(../img/dancing/5.png);
-    visibility: visible;
-    left: -20.45455%; }
-  47.001%, 49.999% {
-    background-image: none;
-    visibility: hidden; }
-  50%, 57% {
-    background-image: url(../img/dancing/6.png);
-    visibility: visible;
-    left: -4.54545%; }
-  57.001%, 59.999% {
-    background-image: none;
-    visibility: hidden; }
-  60%, 67% {
-    background-image: url(../img/dancing/7.png);
-    visibility: visible;
-    left: 11.36364%; }
-  67.001%, 69.999% {
-    background-image: none;
-    visibility: hidden; }
-  70%, 77% {
-    background-image: url(../img/dancing/8.png);
-    visibility: visible;
-    left: 27.27273%; }
-  77.001%, 79.999% {
-    background-image: none;
-    visibility: hidden; }
-  80%, 87% {
-    background-image: url(../img/dancing/9.png);
-    visibility: visible;
-    left: 43.18182%; }
-  87.001%, 89.999% {
-    background-image: none;
-    visibility: hidden; }
-  90%, 97% {
-    background-image: url(../img/dancing/10.png);
-    visibility: visible;
-    left: 59.09091%; }
-  97.001%, 99.999% {
-    background-image: none;
-    visibility: hidden; }
-  100% {
-    left: 75%;
-    visibility: visible;
-    background-image: url(../img/dancing/11.png); } }
-.body-container.choreo {
-  top: 0px;
-  width: 70%;
-  margin-left: -35%;
-  position: relative; }
-  .body-container.choreo .choreo-container {
-    border: 10px solid white;
-    padding: 20px;
-    position: absolute;
-    margin-top: 50px;
-    width: auto; }
-    .body-container.choreo .choreo-container h3 {
-      text-align: left; }
-    .body-container.choreo .choreo-container h4 {
-      text-transform: uppercase;
-      letter-spacing: 0px; }
-      .body-container.choreo .choreo-container h4:after {
-        content: ""; }
-    .body-container.choreo .choreo-container p {
-      text-align: justify; }
-    .body-container.choreo .choreo-container .choreo-box {
-      display: table;
-      margin-top: 30px;
-      padding-bottom: 40px;
-      padding-top: 30px;
-      border-bottom: 4px solid white;
-      opacity: 0; }
-      .body-container.choreo .choreo-container .choreo-box:last-child {
-        border-bottom: none; }
-      .body-container.choreo .choreo-container .choreo-box .visual, .body-container.choreo .choreo-container .choreo-box .copy {
-        vertical-align: middle;
-        width: 45%;
-        margin: 0% 1%; }
-      .body-container.choreo .choreo-container .choreo-box:nth-last-of-type(2n+1) .visual {
-        float: right;
-        clear: right; }
-      .body-container.choreo .choreo-container .choreo-box:nth-last-of-type(2n+1) .copy {
-        float: left;
-        clear: left; }
-      .body-container.choreo .choreo-container .choreo-box:nth-last-of-type(2n) .visual {
-        float: left;
-        clear: left; }
-      .body-container.choreo .choreo-container .choreo-box:nth-last-of-type(2n) .copy {
-        float: right;
-        clear: right; }
-      .body-container.choreo .choreo-container .choreo-box .copy {
-        height: 100%; }
-    .body-container.choreo .choreo-container .choreo-box:nth-of-type(1) {
-      -webkit-animation: fadeIn 300ms linear forwards;
-      animation: fadeIn 300ms linear forwards;
-      -webkit-animation-delay: 200ms;
-      animation-delay: 200ms; }
-    .body-container.choreo .choreo-container .choreo-box:nth-of-type(2) {
-      -webkit-animation: fadeIn 300ms linear forwards;
-      animation: fadeIn 300ms linear forwards;
-      -webkit-animation-delay: 400ms;
-      animation-delay: 400ms; }
-    .body-container.choreo .choreo-container .choreo-box:nth-of-type(3) {
-      -webkit-animation: fadeIn 300ms linear forwards;
-      animation: fadeIn 300ms linear forwards;
-      -webkit-animation-delay: 600ms;
-      animation-delay: 600ms; }
-    .body-container.choreo .choreo-container .choreo-box:nth-of-type(4) {
-      -webkit-animation: fadeIn 300ms linear forwards;
-      animation: fadeIn 300ms linear forwards;
-      -webkit-animation-delay: 800ms;
-      animation-delay: 800ms; }
-    .body-container.choreo .choreo-container .choreo-box:nth-of-type(5) {
-      -webkit-animation: fadeIn 300ms linear forwards;
-      animation: fadeIn 300ms linear forwards;
-      -webkit-animation-delay: 1000ms;
-      animation-delay: 1000ms; }
-    .body-container.choreo .choreo-container .choreo-box:nth-of-type(6) {
-      -webkit-animation: fadeIn 300ms linear forwards;
-      animation: fadeIn 300ms linear forwards;
-      -webkit-animation-delay: 1200ms;
-      animation-delay: 1200ms; }
-    .body-container.choreo .choreo-container .choreo-box:nth-of-type(7) {
-      -webkit-animation: fadeIn 300ms linear forwards;
-      animation: fadeIn 300ms linear forwards;
-      -webkit-animation-delay: 1400ms;
-      animation-delay: 1400ms; }
+/*
+Error: Undefined variable: "$font-lato".
+        on line 13 of sass/choreography.sass
 
-/*# sourceMappingURL=choreography.css.map */
+8:     border: 10px solid white
+9:     padding: 20px
+10:     position: absolute
+11:     margin-top: 50px
+12:     width: auto
+13:     font-family: $font-lato
+14: 
+15:     h3
+16:       text-align: left
+17: 
+18:     h4
+
+Backtrace:
+sass/choreography.sass:13
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/script/tree/variable.rb:49:in `_perform'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:397:in `visit_prop'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block (2 levels) in visit_rule'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `map'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block in visit_rule'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:431:in `visit_rule'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block (2 levels) in visit_rule'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `map'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block in visit_rule'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:431:in `visit_rule'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `map'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:169:in `block in visit_children'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:168:in `visit_children'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:188:in `visit_root'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:159:in `visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:8:in `visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/root_node.rb:36:in `css_tree'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/engine.rb:381:in `_render_with_sourcemap'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/engine.rb:298:in `render_with_sourcemap'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `each'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:473:in `on_file_changed'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:331:in `block in watch'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `on_change'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Undefined variable: \"$font-lato\".\A         on line 13 of sass/choreography.sass\A \A 8:     border: 10px solid white\A 9:     padding: 20px\A 10:     position: absolute\A 11:     margin-top: 50px\A 12:     width: auto\A 13:     font-family: $font-lato\A 14: \A 15:     h3\A 16:       text-align: left\A 17: \A 18:     h4"; }
