--- a/sass/choreography.sass
+++ b/sass/choreography.sass
@@ -10,6 +10,7 @@
     position: absolute
     margin-top: 50px
     width: auto
+    font-family: $font-lato
 
     h3
       text-align: left
@@ -21,9 +22,11 @@
         content: ''
     p
       text-align: justify
+      font-weight: 300
 
     .choreo-box
-      display: table
+      display: flex
+      align-items: center
       margin-top: 30px
       padding-bottom: 40px
       padding-top: 30px
@@ -34,23 +37,11 @@
       .visual, .copy
         vertical-align: middle
         width: 45%
-        margin: 0% 1%
-      &:nth-last-of-type(2n+1)
-        .visual
-          float: right
-          clear: right
-        .copy
-          float: left
-          clear: left
+        margin: 0% 2.5%
       &:nth-last-of-type(2n)
-        .visual
-          float: left
-          clear: left
-        .copy
-          float: right
-          clear: right
-      .copy
-        height: 100%
+        flex-direction: row
+      &:nth-last-of-type(2n+1)
+        flex-direction: row-reverse
     .choreo-box
       @for $i from 1 through 7
         &:nth-of-type(#{$i})
