--- a/sass/choreography.sass
+++ b/sass/choreography.sass
@@ -34,8 +34,6 @@
       opacity: 0
       &:last-child
         border-bottom: none
-      .visual, .copy
-        vertical-align: middle
         width: 45%
         margin: 0% 2.5%
       &:nth-last-of-type(2n)
@@ -47,3 +45,8 @@
         &:nth-of-type(#{$i})
           +fade(300ms)
           +delay(#{$i * 200}ms)
+    @media screen and (max-width: 640px)
+      .choreo-box
+        flex-direction: column
+        .visual, .copy
+          width: 80%
