--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -161,6 +161,8 @@ h4 {
   height: 50vh;
   position: relative;
   z-index: -1; }
+  .media .carousel img {
+    border: 4px solid white; }
   .media .carousel img, .media .carousel .card {
     position: absolute;
     display: none;
