--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -21,6 +21,8 @@
   height: 50vh;
   position: relative;
   z-index: -1; }
+  .media .carousel img {
+    border: 4px solid white; }
   .media .carousel img, .media .carousel .card {
     position: absolute;
     display: none;
