--- a/sass/media.sass
+++ b/sass/media.sass
@@ -26,6 +26,9 @@
     position: relative
     z-index: -1
 
+    img
+      border: 4px solid white
+
     img, .card
       position: absolute
       display: none
