--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -16,75 +16,75 @@
   0%, 7% {
     background-image: url(../img/dancing/1.png);
     visibility: visible;
-    left: -84.09091%; }
+    left: -12.72727%; }
   7.001%, 9.999% {
     background-image: none;
     visibility: hidden; }
   10%, 17% {
     background-image: url(../img/dancing/2.png);
     visibility: visible;
-    left: -68.18182%; }
+    left: -5.45455%; }
   17.001%, 19.999% {
     background-image: none;
     visibility: hidden; }
   20%, 27% {
     background-image: url(../img/dancing/3.png);
     visibility: visible;
-    left: -52.27273%; }
+    left: 1.81818%; }
   27.001%, 29.999% {
     background-image: none;
     visibility: hidden; }
   30%, 37% {
     background-image: url(../img/dancing/4.png);
     visibility: visible;
-    left: -36.36364%; }
+    left: 9.09091%; }
   37.001%, 39.999% {
     background-image: none;
     visibility: hidden; }
   40%, 47% {
     background-image: url(../img/dancing/5.png);
     visibility: visible;
-    left: -20.45455%; }
+    left: 16.36364%; }
   47.001%, 49.999% {
     background-image: none;
     visibility: hidden; }
   50%, 57% {
     background-image: url(../img/dancing/6.png);
     visibility: visible;
-    left: -4.54545%; }
+    left: 23.63636%; }
   57.001%, 59.999% {
     background-image: none;
     visibility: hidden; }
   60%, 67% {
     background-image: url(../img/dancing/7.png);
     visibility: visible;
-    left: 11.36364%; }
+    left: 30.90909%; }
   67.001%, 69.999% {
     background-image: none;
     visibility: hidden; }
   70%, 77% {
     background-image: url(../img/dancing/8.png);
     visibility: visible;
-    left: 27.27273%; }
+    left: 38.18182%; }
   77.001%, 79.999% {
     background-image: none;
     visibility: hidden; }
   80%, 87% {
     background-image: url(../img/dancing/9.png);
     visibility: visible;
-    left: 43.18182%; }
+    left: 45.45455%; }
   87.001%, 89.999% {
     background-image: none;
     visibility: hidden; }
   90%, 97% {
     background-image: url(../img/dancing/10.png);
     visibility: visible;
-    left: 59.09091%; }
+    left: 52.72727%; }
   97.001%, 99.999% {
     background-image: none;
     visibility: hidden; }
   100% {
-    left: 75%;
+    left: 60%;
     visibility: visible;
     background-image: url(../img/dancing/11.png); } }
 body {
@@ -192,75 +192,75 @@ h4 {
   0%, 7% {
     background-image: url(../img/dancing/1.png);
     visibility: visible;
-    left: -84.09091%; }
+    left: -12.72727%; }
   7.001%, 9.999% {
     background-image: none;
     visibility: hidden; }
   10%, 17% {
     background-image: url(../img/dancing/2.png);
     visibility: visible;
-    left: -68.18182%; }
+    left: -5.45455%; }
   17.001%, 19.999% {
     background-image: none;
     visibility: hidden; }
   20%, 27% {
     background-image: url(../img/dancing/3.png);
     visibility: visible;
-    left: -52.27273%; }
+    left: 1.81818%; }
   27.001%, 29.999% {
     background-image: none;
     visibility: hidden; }
   30%, 37% {
     background-image: url(../img/dancing/4.png);
     visibility: visible;
-    left: -36.36364%; }
+    left: 9.09091%; }
   37.001%, 39.999% {
     background-image: none;
     visibility: hidden; }
   40%, 47% {
     background-image: url(../img/dancing/5.png);
     visibility: visible;
-    left: -20.45455%; }
+    left: 16.36364%; }
   47.001%, 49.999% {
     background-image: none;
     visibility: hidden; }
   50%, 57% {
     background-image: url(../img/dancing/6.png);
     visibility: visible;
-    left: -4.54545%; }
+    left: 23.63636%; }
   57.001%, 59.999% {
     background-image: none;
     visibility: hidden; }
   60%, 67% {
     background-image: url(../img/dancing/7.png);
     visibility: visible;
-    left: 11.36364%; }
+    left: 30.90909%; }
   67.001%, 69.999% {
     background-image: none;
     visibility: hidden; }
   70%, 77% {
     background-image: url(../img/dancing/8.png);
     visibility: visible;
-    left: 27.27273%; }
+    left: 38.18182%; }
   77.001%, 79.999% {
     background-image: none;
     visibility: hidden; }
   80%, 87% {
     background-image: url(../img/dancing/9.png);
     visibility: visible;
-    left: 43.18182%; }
+    left: 45.45455%; }
   87.001%, 89.999% {
     background-image: none;
     visibility: hidden; }
   90%, 97% {
     background-image: url(../img/dancing/10.png);
     visibility: visible;
-    left: 59.09091%; }
+    left: 52.72727%; }
   97.001%, 99.999% {
     background-image: none;
     visibility: hidden; }
   100% {
-    left: 75%;
+    left: 60%;
     visibility: visible;
     background-image: url(../img/dancing/11.png); } }
 .body-container.bio {
@@ -334,75 +334,75 @@ h4 {
   0%, 7% {
     background-image: url(../img/dancing/1.png);
     visibility: visible;
-    left: -84.09091%; }
+    left: -12.72727%; }
   7.001%, 9.999% {
     background-image: none;
     visibility: hidden; }
   10%, 17% {
     background-image: url(../img/dancing/2.png);
     visibility: visible;
-    left: -68.18182%; }
+    left: -5.45455%; }
   17.001%, 19.999% {
     background-image: none;
     visibility: hidden; }
   20%, 27% {
     background-image: url(../img/dancing/3.png);
     visibility: visible;
-    left: -52.27273%; }
+    left: 1.81818%; }
   27.001%, 29.999% {
     background-image: none;
     visibility: hidden; }
   30%, 37% {
     background-image: url(../img/dancing/4.png);
     visibility: visible;
-    left: -36.36364%; }
+    left: 9.09091%; }
   37.001%, 39.999% {
     background-image: none;
     visibility: hidden; }
   40%, 47% {
     background-image: url(../img/dancing/5.png);
     visibility: visible;
-    left: -20.45455%; }
+    left: 16.36364%; }
   47.001%, 49.999% {
     background-image: none;
     visibility: hidden; }
   50%, 57% {
     background-image: url(../img/dancing/6.png);
     visibility: visible;
-    left: -4.54545%; }
+    left: 23.63636%; }
   57.001%, 59.999% {
     background-image: none;
     visibility: hidden; }
   60%, 67% {
     background-image: url(../img/dancing/7.png);
     visibility: visible;
-    left: 11.36364%; }
+    left: 30.90909%; }
   67.001%, 69.999% {
     background-image: none;
     visibility: hidden; }
   70%, 77% {
     background-image: url(../img/dancing/8.png);
     visibility: visible;
-    left: 27.27273%; }
+    left: 38.18182%; }
   77.001%, 79.999% {
     background-image: none;
     visibility: hidden; }
   80%, 87% {
     background-image: url(../img/dancing/9.png);
     visibility: visible;
-    left: 43.18182%; }
+    left: 45.45455%; }
   87.001%, 89.999% {
     background-image: none;
     visibility: hidden; }
   90%, 97% {
     background-image: url(../img/dancing/10.png);
     visibility: visible;
-    left: 59.09091%; }
+    left: 52.72727%; }
   97.001%, 99.999% {
     background-image: none;
     visibility: hidden; }
   100% {
-    left: 75%;
+    left: 60%;
     visibility: visible;
     background-image: url(../img/dancing/11.png); } }
 .body-container.choreo {
@@ -518,16 +518,16 @@ h4 {
 
 .body-container {
   position: fixed;
-  width: 40vw;
+  width: 100%;
   top: 50%;
   left: 50%;
   transform: translate3d(0px, -50%, 0px);
-  margin-left: -20vw;
+  margin-left: -50%;
   text-align: center; }
   .body-container h4 {
     display: inline-block;
     letter-spacing: 9px; }
-    @media screen and (min-width: 1120px) {
+    @media screen and (min-width: 414px) {
       .body-container h4:first-of-type:after {
         content: " | "; } }
   .body-container.menu-fade-in h1, .body-container.menu-fade-in h4, .body-container.menu-fade-in .menu .menu-item {
@@ -542,7 +542,8 @@ h4 {
     text-align: left;
     list-style: none;
     font-size: 20px;
-    margin-bottom: 0; }
+    margin-bottom: 0;
+    padding-left: 27vw; }
     .body-container .menu-item {
       position: relative;
       display: block;
@@ -648,7 +649,7 @@ h4 {
     animation: dance 3.2s linear forwards;
     -webkit-animation: dance 3.2s linear forwards; }
   .dancing-image:not(.dance) {
-    left: 75%;
+    left: 60%;
     background-image: url(../img/dancing/11.png); }
 
 .leftImage {
