--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -1,14 +1,12 @@
 extends ../pug/_main_template.pug
 block title
   title Emily Hansel | Choreography
-  link(rel="shortcut icon", href="../assets/img/favicon.ico")
-  link(rel="icon", href="../assets/img/favicon.ico", type="image/x-icon")
   link(rel="stylesheet", href="../assets/css/index.css")
 block content
   .home-button
     a(href="/" alt="Emily") E
-      img.flip(src="../assets/img/dancing/crop/1.png")
-  .body-container.choreo
+      img.flip(src="../assets/img/dancing/crop/2.png")
+  .choreo
     .choreo-container
       h3 Choreography
       .choreo-box
@@ -74,9 +72,9 @@ block content
         .copy
           h4 Scream (2014)
           p.
-            <b>Choreographed</b> by Emily Hansel.<br>
+            <b>Choreographed</b> by Emily Hansel.<br/>
             <b>Performed</b> by Hannah Luckow, Alyssa Marchand, Robert Kelley, Hannah Mainellis, Monica Moneses, Cloe Leppard, and Dayne Davis.<br>
-            <b>Music</b> by Philip Glass and Yo-Yo Ma.<br>
+            <b>Music</b> by Philip Glass and Yo-Yo Ma.<br/>
           p Inspired by Edvard Munch's "The Scream."
         img.visual(src="../assets/img/choreo/scream.png" alt="Scream")
 block scripts
