--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -4,6 +4,8 @@ html
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
     meta(name="viewport", content="width=device-width, initial-scale=1")
+    link(rel="shortcut icon", href="/assets/img/favicon2.ico")
+    link(rel="icon", href="/assets/img/favicon2.ico", type="image/x-icon")
     block title
   body
     .nav-opener
